Replaced the sidebar email address with udaciouspeople@gmail.com

--- a/themes/tranquilpeak/_config.yml
+++ b/themes/tranquilpeak/_config.yml
@@ -72,7 +72,7 @@ sidebar:
         #     icon: linkedin
          mail:
             title: Mail
-            url: mailto:jake@jakebryan.me
+            url: mailto:udaciouspeople@gmail.com
             icon: envelope-o
     rss:
         rss:
